calc/y.output
   0  $accept : line_list $end

   1  line_list : line
   2            | line_list line

   3  line : expression CR
   4       | CR
   5       | STR CR

   6  expression : term
   7             | expression ADD term
   8             | expression SUB term

   9  term : primary_expression
  10       | term MUL primary_expression
  11       | term DIV primary_expression

  12  primary_expression : DOUBLE_LITERAL

state 0
	$accept : . line_list $end  (0)

	DOUBLE_LITERAL  shift 1
	STR  shift 2
	CR  shift 3
	.  error

	line_list  goto 4
	expression  goto 5
	term  goto 6
	primary_expression  goto 7
	line  goto 8


state 1
	primary_expression : DOUBLE_LITERAL .  (12)

	.  reduce 12


state 2
	line : STR . CR  (5)

	CR  shift 9
	.  error


state 3
	line : CR .  (4)

	.  reduce 4


state 4
	$accept : line_list . $end  (0)
	line_list : line_list . line  (2)

	$end  accept
	DOUBLE_LITERAL  shift 1
	STR  shift 2
	CR  shift 3
	.  error

	expression  goto 5
	term  goto 6
	primary_expression  goto 7
	line  goto 10


state 5
	line : expression . CR  (3)
	expression : expression . ADD term  (7)
	expression : expression . SUB term  (8)

	ADD  shift 11
	SUB  shift 12
	CR  shift 13
	.  error


state 6
	expression : term .  (6)
	term : term . MUL primary_expression  (10)
	term : term . DIV primary_expression  (11)

	MUL  shift 14
	DIV  shift 15
	ADD  reduce 6
	SUB  reduce 6
	CR  reduce 6


state 7
	term : primary_expression .  (9)

	.  reduce 9


state 8
	line_list : line .  (1)

	.  reduce 1


state 9
	line : STR CR .  (5)

	.  reduce 5


state 10
	line_list : line_list line .  (2)

	.  reduce 2


state 11
	expression : expression ADD . term  (7)

	DOUBLE_LITERAL  shift 1
	.  error

	term  goto 16
	primary_expression  goto 7


state 12
	expression : expression SUB . term  (8)

	DOUBLE_LITERAL  shift 1
	.  error

	term  goto 17
	primary_expression  goto 7


state 13
	line : expression CR .  (3)

	.  reduce 3


state 14
	term : term MUL . primary_expression  (10)

	DOUBLE_LITERAL  shift 1
	.  error

	primary_expression  goto 18


state 15
	term : term DIV . primary_expression  (11)

	DOUBLE_LITERAL  shift 1
	.  error

	primary_expression  goto 19


state 16
	expression : expression ADD term .  (7)
	term : term . MUL primary_expression  (10)
	term : term . DIV primary_expression  (11)

	MUL  shift 14
	DIV  shift 15
	ADD  reduce 7
	SUB  reduce 7
	CR  reduce 7


state 17
	expression : expression SUB term .  (8)
	term : term . MUL primary_expression  (10)
	term : term . DIV primary_expression  (11)

	MUL  shift 14
	DIV  shift 15
	ADD  reduce 8
	SUB  reduce 8
	CR  reduce 8


state 18
	term : term MUL primary_expression .  (10)

	.  reduce 10


state 19
	term : term DIV primary_expression .  (11)

	.  reduce 11


9 terminals, 6 nonterminals
13 grammar rules, 20 states
